app/src/test/resources/autoexpect/syntax/parse/ParserTest/fail/selector_unexpected_type_args.cz.expected.txt
error: unexpected type arguments
  --> selector_unexpected_type_args.cz:2:8
2 |     a.b<>
           ~~

error: unexpected type arguments
  --> selector_unexpected_type_args.cz:3:8
3 |     a.b<C, D>
           ~~~~~~
